new evento view and upload image

--- a/src/app/main/apps/contacts/sidebars/main/main.component.html
+++ b/src/app/main/apps/contacts/sidebars/main/main.component.html
@@ -21,19 +21,19 @@
                 <div class="nav-item" aria-label="inbox">
                     <a class="nav-link" matRipple (click)="changeFilter('all')"
                        [ngClass]="{'active accent':filterBy ==='all'}">
-                        <span class="title">All Contacts</span>
+                        <span class="title">Todas</span>
                     </a>
                 </div>
 
                 <div class="nav-item" aria-label="frequently contacted" (click)="changeFilter('frequent')">
                     <a class="nav-link" matRipple [ngClass]="{'active accent':filterBy ==='frequent'}">
-                        <div class="title">Freequently contacted</div>
+                        <div class="title">Confirmaron</div>
                     </a>
                 </div>
 
                 <div class="nav-item" aria-label="starred" (click)="changeFilter('starred')">
                     <a class="nav-link" matRipple [ngClass]="{'active accent':filterBy ==='starred'}">
-                        <div class="title">Starred Contacts</div>
+                        <div class="title">Rechazaron</div>
                     </a>
                 </div>
             </div>
