--- a/src/app/main/apps/e-commerce/product/product.component.scss
+++ b/src/app/main/apps/e-commerce/product/product.component.scss
@@ -4,9 +4,7 @@
 
         .product-image {
             overflow: hidden;
-            width: 56px;
             min-width: 56px;
-            max-width: 56px;
             height: 56px;
             min-height: 56px;
             max-height: 56px;
@@ -22,6 +20,10 @@
         .subtitle {
             margin: 6px 0 0 0;
         }
+   
+    }
+    .accent-btn {
+        padding: 2%;
     }
 
     .content {
@@ -43,7 +45,7 @@
 
         .product-image {
             overflow: hidden;
-            width: 128px;
+            width: 100%;
             height: 128px;
             margin-right: 16px;
             margin-bottom: 16px;
@@ -63,4 +65,38 @@
         }
     }
 
+    .mat-icon-form {
+        color: rgba(0, 0, 0, 0.54);
+    }
+    .icon-users{
+        max-width: 50%;
+    }
+
+
+    form {
+        width: 100%;
+        max-width: 800px !important;
+    }
+
+    .form-errors-model {
+        flex: 1;
+        max-width: 800px !important;
+
+        code {
+            background: none !important;
+        }
+    }
+
+    .inv-card {
+        
+            max-width: 0px;
+            min-width: 170px;
+            border-radius: 8px;
+            border: 1px solid;
+            border-color: rgba(0, 0, 0, 0.12);
+}
+        
+
+
+ 
 }
