--- a/src/app/main/apps/contacts/contacts.component.html
+++ b/src/app/main/apps/contacts/contacts.component.html
@@ -17,7 +17,7 @@
                           [@animate]="{value:'*',params:{delay:'50ms',scale:'0.2'}}">account_box
                 </mat-icon>
                 <span class="logo-text h1" [@animate]="{value:'*',params:{delay:'100ms',x:'-25px'}}">
-                    Contacts
+                    Personas
                 </span>
             </div>
 
@@ -83,4 +83,19 @@
         [@animate]="{value:'*', params:{delay:'300ms',scale:'.2'}}">
     <mat-icon>person_add</mat-icon>
 </button>
+
+
+<div class="file-uploader">
+        <input hidden type="file" #fileInput/>
+        <button mat-fab
+                color="warn"
+                class="add-file-button"
+                (click)="fileInput.click()"
+                aria-label="Add file"
+                [@animate]="{value:'*', params:{delay:'300ms',scale:'0.2'}}">
+            <mat-icon>add</mat-icon>
+        </button>
+    </div>
+
+
 <!-- / ADD CONTACT BUTTON -->
