invitados dialog design, button floating action, add person

--- a/src/app/main/apps/contacts/contact-list/contact-list.component.scss
+++ b/src/app/main/apps/contacts/contact-list/contact-list.component.scss
@@ -52,7 +52,7 @@ contacts-contact-list {
     z-index: 99;
 
     @include media-breakpoint('xs') {
-        position: sticky;
+        position: absolute;
         top: calc(100vh - 120px);
         bottom: auto;
     }
