--- a/src/app/main/apps/e-commerce/product/product.component.scss
+++ b/src/app/main/apps/e-commerce/product/product.component.scss
@@ -53,7 +53,7 @@
 
             img {
                 height: 100%;
-                width: auto;
+                width: 80%;
                 max-width: none;
             }
         }
