integration person by id, display persons, design, images and icons

--- a/src/app/layout/speed-dial-fab/speed-dial-fab.component.html
+++ b/src/app/layout/speed-dial-fab/speed-dial-fab.component.html
@@ -4,6 +4,7 @@
                 <mat-icon>add</mat-icon>
         </button>
         <div [@speedDialStagger]="buttons.length"> <!-- and here -->
+          <input hidden id="fileUpload" type="file" #fileInput/>
           <button *ngFor="let btn of buttons"
                   mat-mini-fab
                   class="fab-secondary"
