--- a/src/app/main/apps/contacts/contact-form/contact-form.component.html
+++ b/src/app/main/apps/contacts/contact-form/contact-form.component.html
@@ -20,7 +20,7 @@
 
             <div fxLayout="row" fxLayoutAlign="start start">
                 <mat-form-field appearance="outline" fxFlex>
-                    <mat-label>Name</mat-label>
+                    <mat-label>Nombre</mat-label>
                     <mat-icon matSuffix class="secondary-text">account_circle</mat-icon>
                     <input name="name" formControlName="name" matInput required>
                 </mat-form-field>
@@ -28,7 +28,7 @@
 
             <div fxLayout="row" fxLayoutAlign="start start">
                 <mat-form-field appearance="outline" fxFlex>
-                    <mat-label>Lastname</mat-label>
+                    <mat-label>Apellido</mat-label>
                     <mat-icon matSuffix class="secondary-text">account_circle</mat-icon>
                     <input name="lastName" formControlName="lastName" matInput>
                 </mat-form-field>
@@ -36,15 +36,7 @@
 
             <div fxLayout="row" fxLayoutAlign="start start">
                 <mat-form-field appearance="outline" fxFlex>
-                    <mat-label>Nickname</mat-label>
-                    <mat-icon matSuffix class="secondary-text">star</mat-icon>
-                    <input name="nickname" formControlName="nickname" matInput>
-                </mat-form-field>
-            </div>
-
-            <div fxLayout="row" fxLayoutAlign="start start">
-                <mat-form-field appearance="outline" fxFlex>
-                    <mat-label>Phone number</mat-label>
+                    <mat-label>Numero telefono</mat-label>
                     <mat-icon matSuffix class="secondary-text">phone</mat-icon>
                     <input formControlName="phone" matInput>
                 </mat-form-field>
@@ -52,7 +44,7 @@
 
             <div fxLayout="row" fxLayoutAlign="start start">
                 <mat-form-field appearance="outline" fxFlex>
-                    <mat-label>Email</mat-label>
+                    <mat-label>Correo electrónico</mat-label>
                     <mat-icon matSuffix class="secondary-text">email</mat-icon>
                     <input name="email" formControlName="email" matInput type="email">
                 </mat-form-field>
@@ -60,7 +52,7 @@
 
             <div fxLayout="row" fxLayoutAlign="start start">
                 <mat-form-field appearance="outline" fxFlex>
-                    <mat-label>Company</mat-label>
+                    <mat-label>Compañia</mat-label>
                     <mat-icon matSuffix class="secondary-text">domain</mat-icon>
                     <input name="company" formControlName="company" matInput>
                 </mat-form-field>
@@ -68,7 +60,7 @@
 
             <div fxLayout="row" fxLayoutAlign="start start">
                 <mat-form-field appearance="outline" fxFlex>
-                    <mat-label>Job title</mat-label>
+                    <mat-label>Perfil</mat-label>
                     <mat-icon matSuffix class="secondary-text">work</mat-icon>
                     <input name="jobTitle" formControlName="jobTitle" matInput>
                 </mat-form-field>
@@ -76,7 +68,7 @@
 
             <div fxLayout="row" fxLayoutAlign="start start">
                 <mat-form-field appearance="outline" fxFlex>
-                    <mat-label>Birthday</mat-label>
+                    <mat-label>Cumpleaños</mat-label>
                     <input matInput [matDatepicker]="birthdayDatePicker" name="birthday" formControlName="birthday">
                     <mat-datepicker-toggle matSuffix [for]="birthdayDatePicker"></mat-datepicker-toggle>
                     <mat-datepicker #birthdayDatePicker></mat-datepicker>
@@ -85,7 +77,7 @@
 
             <div fxLayout="row" fxLayoutAlign="start start">
                 <mat-form-field appearance="outline" fxFlex>
-                    <mat-label>Address</mat-label>
+                    <mat-label>Dirección</mat-label>
                     <mat-icon matSuffix class="secondary-text">home</mat-icon>
                     <input name="address" formControlName="address" matInput>
                 </mat-form-field>
@@ -93,7 +85,7 @@
 
             <div fxLayout="row" class="textarea-wrapper" fxLayoutAlign="start start">
                 <mat-form-field appearance="outline" fxFlex>
-                    <mat-label>Notes</mat-label>
+                    <mat-label>Notas</mat-label>
                     <textarea name="notes" formControlName="notes" matInput type="text" max-rows="4"></textarea>
                 </mat-form-field>
             </div>
