--- a/src/app/main/apps/e-commerce/products/products.component.html
+++ b/src/app/main/apps/e-commerce/products/products.component.html
@@ -16,7 +16,7 @@
             <div class="logo mb-24 mb-md-0"
                  fxLayout="row" fxLayoutAlign="start center">
                 <mat-icon class="logo-icon s-32 mr-16" [@animate]="{value:'*',params:{delay:'50ms',scale:'0.2'}}">
-                    shopping_basket
+                        event_note
                 </mat-icon>
                 <span class="logo-text h1" [@animate]="{value:'*',params:{delay:'100ms',x:'-25px'}}">
                     Eventos
@@ -45,9 +45,12 @@
         <!-- / HEADER -->
 
         <!-- CONTENT CARD -->
-        <div class="content-card">
+        <div [ngClass]="{
+            'table-hidden': !eventExist,
+            'table-visible': eventExist }"
+                class="content-card">
 
-            <mat-table class="products-table"
+            <mat-table  class="products-table"
                        #table [dataSource]="dataSource"
                        matSort
                        [@animateStagger]="{value:'50'}"
@@ -136,6 +139,7 @@
 
             </mat-table>
 
+
             <mat-paginator #paginator
                            [length]="dataSource.filteredData.length"
                            [pageIndex]="0"
@@ -144,6 +148,19 @@
             </mat-paginator>
 
         </div>
+
+
+        <div class="content-card empty-card" *ngIf="!eventExist">
+
+
+            <img class="empty-event" src="assets/images/eventoEmpty.jpg">
+
+
+
+
+        </div>
+
+
         <!-- / CONTENT CARD -->
     </div>
     <!-- / CENTER -->
