--- a/src/app/main/apps/e-commerce/products/products.component.scss
+++ b/src/app/main/apps/e-commerce/products/products.component.scss
@@ -142,6 +142,18 @@ e-commerce-products {
     }
 }
 
+.empty-event {
+    width: 100%;
+    height: 100%;
+}
+
+.table-hidden {
+    display: none !important;
+}
+
+.table-visible {
+    display: flex !important;
+}
 
 
 
