--- a/src/app/main/apps/e-commerce/product/product.component.html
+++ b/src/app/main/apps/e-commerce/product/product.component.html
@@ -34,14 +34,14 @@
                     class="save-product-button"
                     [disabled]="productForm.invalid"
                     *ngIf="pageType ==='new'" (click)="addProduct()">
-                <span>ADD</span>
+                <span>CREAR</span>
             </button>
 
             <button mat-raised-button
                     class="save-product-button"
                     [disabled]="productForm.invalid || productForm.pristine"
                     *ngIf="pageType ==='edit'" (click)="saveProduct()">
-                <span>SAVE</span>
+                <span>GUARDAR</span>
             </button>
         </div>
         <!-- / HEADER -->
@@ -182,8 +182,8 @@
                     </div>
 
                     <div class="p-16 pt-0" fxLayout="row" fxLayoutAlign="space-between center">
-                        <div fxLayout="row" fxLayoutAlign="start start">
-                            <span class="font-weight-300 font-size-72 line-height-72">23</span>
+                        <div class="count"  fxLayout="row" fxLayoutAlign="center center">
+                            <span class="font-weight-300 font-size-72 line-height-72">{{ _contactsService.contacts.length }}</span>
                             <span
                                 class="font-weight-300 font-size-48 line-height-48 ml-8 mt-4"></span>
                             <span
@@ -201,7 +201,7 @@
                             <div fxLayout="row" fxLayoutAlign="start center">
                                 <mat-icon 
                                     class="icon s-16 mr-16">check_circle</mat-icon>
-                                <div class="secondary-text">9</div>
+                                <div class="secondary-text">1</div>
                             </div>
                         </div>
 
@@ -210,7 +210,7 @@
                             <div fxLayout="row" fxLayoutAlign="start center">
                                 <mat-icon 
                                     class="icon s-16 mr-16">cancel</mat-icon>
-                                <div class="secondary-text">3</div>
+                                <div class="secondary-text">1</div>
 
                             </div>
                         </div>
@@ -220,7 +220,7 @@
                             <div fxLayout="row" fxLayoutAlign="start center">
                                 <mat-icon
                                     class="icon s-16 mr-16">hourglass_empty</mat-icon>
-                                <div class="secondary-text">11</div>
+                                <div class="secondary-text">0</div>
                             </div>
                         </div>
 
@@ -230,9 +230,10 @@
 
                     <div class="p-8 pt-0" fxLayout="row" fxLayoutAlign="start center">
                             <button  
+                            [disabled]="!isCreated"
                             (click)="openContacts()"
                             mat-button color="accent">
-                            Agregar    
+                            Inivitar    
                             <mat-icon>person_add</mat-icon></button>
                         </div>
 
