--- a/src/app/main/apps/e-commerce/product/product.component.scss
+++ b/src/app/main/apps/e-commerce/product/product.component.scss
@@ -53,7 +53,7 @@
 
             img {
                 height: 100%;
-                width: 80%;
+                width: 100%;
                 max-width: none;
             }
         }
@@ -88,12 +88,18 @@
     }
 
     .inv-card {
-        
-            max-width: 0px;
-            min-width: 170px;
-            border-radius: 8px;
-            border: 1px solid;
-            border-color: rgba(0, 0, 0, 0.12);
+        text-align: center;
+        max-width: 0px;
+        min-width: 100%;
+        border-radius: 8px;
+        border: 1px solid;
+        border-color: rgba(0, 0, 0, 0.12)
+}
+
+.count {
+
+    overflow: hidden;
+    width: 100%;
 }
         
 
