--- a/src/app/main/apps/contacts/selected-bar/selected-bar.component.html
+++ b/src/app/main/apps/contacts/selected-bar/selected-bar.component.html
@@ -3,7 +3,7 @@
     <div class="close-button-wrapper" fxFlex="0 1 auto" fxFlex.gt-sm="220px" (click)="deselectAll()">
         <button class="p-8" mat-button fxLayout="row" fxLayoutAlign="start center">
             <mat-icon class="mr-8">arrow_back</mat-icon>
-            <span class="text-uppercase">Back</span>
+            <span class="text-uppercase">Atrás</span>
         </button>
     </div>
 
@@ -12,7 +12,8 @@
         <div>
             <span class="selected-contacts-count">
                 <span class="mr-4">{{selectedContacts.length}}</span>
-                <span>selected</span>
+                <span *ngIf="selectedContacts.length === 1">seleccinado</span>
+                <span *ngIf="selectedContacts.length > 1">seleccionados</span>
             </span>
 
             <button mat-icon-button [matMenuTriggerFor]="selectMenu">
