add multiples invitados + design image

--- a/src/app/main/apps/e-commerce/product/product.component.scss
+++ b/src/app/main/apps/e-commerce/product/product.component.scss
@@ -53,10 +53,14 @@
     }
 
     .mat-icon-form {
-        color: rgba(0, 0, 0, 0.54);
+        color: rgba(114, 114, 114, 0.54);
     }
     .icon-users{
         max-width: 50%;
+    }
+
+    .mat-icon {
+        color: #828282;
     }
 
 
