--- a/src/@fuse/components/confirm-dialog/confirm-dialog.component.html
+++ b/src/@fuse/components/confirm-dialog/confirm-dialog.component.html
@@ -1,6 +1,6 @@
-<h1 matDialogTitle>Confirm</h1>
+<h1 matDialogTitle>Confirmación</h1>
 <div mat-dialog-content>{{confirmMessage}}</div>
 <div mat-dialog-actions class="pt-24">
-    <button mat-raised-button class="mat-accent mr-16" (click)="dialogRef.close(true)">Confirm</button>
-    <button mat-button (click)="dialogRef.close(false)">Cancel</button>
+    <button mat-raised-button class="mat-accent mr-16" (click)="dialogRef.close(true)">Confirmar</button>
+    <button mat-button (click)="dialogRef.close(false)">Cancelar</button>
 </div>
