delete select or one inivtados

--- a/src/app/main/apps/contacts/contact-list/contact-list.component.html
+++ b/src/app/main/apps/contacts/contact-list/contact-list.component.html
@@ -94,7 +94,7 @@
                 <mat-menu #moreMenu="matMenu">
                     <button mat-menu-item aria-label="remove" (click)="deleteContact(contact)">
                         <mat-icon>delete</mat-icon>
-                        <span>Remove</span>
+                        <span>Eliminar</span>
                     </button>
                 </mat-menu>
             </div>
