--- a/src/app/main/apps/contacts/contacts.component.html
+++ b/src/app/main/apps/contacts/contacts.component.html
@@ -76,12 +76,12 @@
     </div>
     <!-- / CONTENT-->
 
-    <div *ngIf="contactInitial">
+
+
+    <div >
         <app-speed-dial-fab></app-speed-dial-fab>
     </div>
-   
   
 </div>
-
 
 
