--- a/src/app/main/apps/contacts/selected-bar/selected-bar.component.html
+++ b/src/app/main/apps/contacts/selected-bar/selected-bar.component.html
@@ -20,8 +20,8 @@
                 <mat-icon>arrow_drop_down</mat-icon>
             </button>
             <mat-menu #selectMenu="matMenu">
-                <button mat-menu-item (click)="selectAll()">Select all</button>
-                <button mat-menu-item (click)="deselectAll()">Deselect all</button>
+                <button mat-menu-item (click)="selectAll()">Seleccionar todos</button>
+                <button mat-menu-item (click)="deselectAll()">Deseleccionar todos</button>
             </mat-menu>
 
         </div>
